1999-09-18  Miquel van Smoorenburg (miquels@cistron.nl)

	* Change a couple of Makefile.ins to plain Makefiles
	* Added missing.c and missing.h
	* Detect <utmp.h> and define replacements in sysutmp.h if missing
	* New mechanism in main/Makefile to detect static modules
	* Fix warnings in lib/filters.c

1999-08-23  Miquel van Smoorenburg (miquels@cistron.nl)

	* src/main/auth.c: Login-Time check: set Session-Timeout to
	  at least 60 seconds (some terminal servers ignore smaller values)
	* src/lib/valuepair.c: fix gettime()
	* src/main/proxy.c: call proxy_cleanup in both send and recv funcs

1999-08-21  Miquel van Smoorenburg (miquels@cistron.nl)

	* configure.in: check for GNU Make
	* doc/*: change Cistron Radius to FreeRadius
	* src/modules/Makefile.in: fix rm -f lib/* (bailed out on lib/CVS)
	* debian/*: some changes (might want to rip out completely)
	* doc/ChangeLog: new format, more like other projects.

radiusd-cistron (1.6-alpha3) experimental; urgency=low

  * Changed directory structure. Each module is now in it's own directory.

 -- Miquel van Smoorenburg <miquels@cistron.nl>  Thu, 12 Aug 1999 19:12:47 +0200

radiusd-cistron (1.6-alpha2) experimental; urgency=low

  * 1.6-alpha2 "Total Eclipse" release ;)
  * Moved a lot of code around
  * Added module code from Alan DeKok
  * Moved more code around, made some stuff into huntgroups
  * You can now register a function that is called when a
    certain valuepair is compared with another
  * Operator support not completely merged (still todo)
  * Only tested with a few requests, but hey, it compiles ...
  * Might rename result constants in modules.h to AUTH_, AUTZ_, ACCT_
  * Rewrote builddbm.c - last remnant of Livingston code is now gone
  * Bugs from alpha1 not fixed yet either

 -- Miquel van Smoorenburg <miquels@cistron.nl>  Wed, 11 Aug 1999 00:55:17 +0200

radiusd-cistron (1.6-alpha1) experimental; urgency=low

  * Fix off_t cast in lseek() in radzap.c
  * Fix getopt() args