@@ -551,22 +551,22 @@ int read_config_files()
 		    librad_errstr);
 		return -1;
 	}
-	sprintf(buffer, "%s/%s", radius_dir, RADIUS_MODULES);
+	sprintf(buffer, "%s.200/%.50s", radius_dir, RADIUS_MODULES);
 	if (read_modules_file(buffer) < 0) {
 	        log(L_ERR|L_CONS, "Errors reading modules");
 		return -1;
 	}
-	sprintf(buffer, "%s/%s", radius_dir, RADIUS_CLIENTS);
+	sprintf(buffer, "%.200s/%.50s", radius_dir, RADIUS_CLIENTS);
 	if (read_clients_file(buffer) < 0) {
 	        log(L_ERR|L_CONS, "Errors reading clients");
 		return -1;
 	}
-	sprintf(buffer, "%s/%s", radius_dir, RADIUS_NASLIST);
+	sprintf(buffer, "%.200s/%.50s", radius_dir, RADIUS_NASLIST);
 	if (read_naslist_file(buffer) < 0) {
 	        log(L_ERR|L_CONS, "Errors reading naslist");
 		return -1;
 	}
-	sprintf(buffer, "%s/%s", radius_dir, RADIUS_REALMS);
+	sprintf(buffer, "%.200s/%.50s", radius_dir, RADIUS_REALMS);
 	if (read_realms_file(buffer) < 0) {
 	        log(L_ERR|L_CONS, "Errors reading realms");
 		return -1;
